--- a/src/Header.css
+++ b/src/Header.css
@@ -3,13 +3,15 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     list-style-type: none;
+    max-width: 100%;
 }
 .info {
     padding: 0;
     margin: 0;
     list-style-type: none;
-    background: black;
+    background: navy;
     color: white;
+    max-width: 100%;
 }
 
 a{
@@ -30,4 +32,9 @@ h3 {
     padding: .5vh;;
     margin: 0;
 }
+
+.edu {
+    width: 20vh;
+}
+
 
