--- a/src/Header.css
+++ b/src/Header.css
@@ -1,13 +1,13 @@
 .list {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     list-style-type: none;
-    max-width: 100%;
+    width: 75%;
+    font-size: 1.3rem;
+    
 }
 .info {
-    padding: 0;
-    margin: 0;
+    display: flex;
     list-style-type: none;
     background: navy;
     color: white;
@@ -15,26 +15,6 @@
 }
 
 a{
-    text-decoration: none;  
-    position: fixed;
-    top: 5vh;
-    align-content: center;
+    text-decoration: none;
     color: white;
-    font-size: 3vh;
-    position: absolute;
 }
-
-h2 {
-    padding: .5vh;
-    margin: 0;
-}
-h3 {
-    padding: .5vh;;
-    margin: 0;
-}
-
-.edu {
-    width: 20vh;
-}
-
-
