--- a/src/EducationandExperience.css
+++ b/src/EducationandExperience.css
@@ -1,5 +1,82 @@
-.eduandexp {
-    text-align: center;
-    margin: 10%;
-    margin-top: 2%;
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #EEE;
+}
+
+code {
+  font-family: source-code-prop, Menlo, Monaco, Consolas, "Courier New",
+  monospace;
+}
+
+.job {
+  width: 100%;
+  max-width: 768px;
+  margin: 0 auto;
+  padding: 15px;
+  
+}
+
+.job .job {
+  margin: 15px;
+  padding: 15px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.job .job .job-title {
+  position: relative;
+  font-size: 20px;
+  
+
+  transition:  all 0.4s ease;
+  color: black;
+  text-align: center;
+}
+.job .job .job-title::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: 0px;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 30px;
+
+  background-image: url("./Images/Arrow.jpg");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  transition: all 0.4s ease-out;
+}
+.job .job .job-detail {
+  opacity: 0;
+  max-height: 0;
+  overflow-y: hidden;
+  transition: all 0.4s ease-out;
+  color: black;
+  text-align: center;
+}
+
+.job .job.open .job-title {
+  margin-bottom: 15px;
+}
+
+.job .job.open .job-title::after {
+  transform:translateY(-50%) rotate(180deg);
+}
+
+.job .job.open .job-detail {
+  max-height: 1000px;
+  opacity: 1;
 }
