--- a/src/EducationandExperience/EducationandExperience.css
+++ b/src/EducationandExperience/EducationandExperience.css
@@ -52,7 +52,7 @@ code {
   width: 50px;
   height: 30px;
 
-  background-image: url("./Images/Arrow.jpg");
+  background-image: url("../Images/Arrow.jpg");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
